--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -62,7 +62,7 @@
 
     <div id='post-header'>
       <div id='heading'>
-        <span>{{category}}</span>
+        <span>{{title}}</span>
       </div>
 
       <div class="layout horizontal">
