--- a/src/components/editor/aq-editor-edit-sidebar-universe.html
+++ b/src/components/editor/aq-editor-edit-sidebar-universe.html
@@ -11,11 +11,19 @@
 
 <dom-module id='aq-editor-edit-sidebar-universe'>
 	<style>
-		
+		#container {
+			color:white;
+			width:90%;
+			margin: 0 auto;
+		}
+
+		h3 {
+			font-size:14px;
+		}
+
 		paper-item {
-			font-size:15px;
+			font-size:12px;
 			--paper-item-min-height: 25px;
-			--border-right:1px solid;
 		}
 
 		paper-item {
@@ -25,9 +33,7 @@
 		}
 
 		iron-pages {
-			--margin-left: 10px;
 			margin-top:20px;
-			--height:50%;
 		}
 
 		a :hover {
@@ -44,18 +50,27 @@
 
 		paper-tabs {
 			height:25px;
-			 --paper-tabs-selection-bar-color:#009688;
+			 --paper-tabs-selection-bar-color:white;
 			 width:100%;
+			 font-size: 13px;
 		}
 
 		paper-tabs :hover {
-			font-weight:bolder;
+			font-weight:bold;
+			font-size: 14px;
 		}
 
-
-		iron-pages {
-			height:70%;
+		paper-listbox {
+			background-color: #333a56;
+			color:white;
+			font-size: 12px;
 		}
+
+		#bottompanel {
+			margin-bottom:50px;
+			font-size: 12px;
+		}
+
     };
     
 
@@ -140,11 +155,10 @@
 
 		</div>	
 
-		<div id='bottom-panel' style="position:fixed;bottom:50px;">
+		<div id='bottom-panel'>
 			<p>Here comes the description of the element.
 			It can be short or long and depends upton the size</p> 
 			<paper-button noink raised on-tap='addScreener'>Add Screener
-				<iron-icon icon="icons:add"></iron-icon>
 			</paper-button>
 		</div>	
 
