--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -32,11 +32,10 @@
       	border: 1px solid #d0d0d0;
         padding: 0 55px;
         line-height: 56px;
-        font-size: 15px;
+        font-size: 18px;
         font-weight: bold;
         border-bottom: 1px solid #e5e5e5;
-        background-color: white;
-        background-color:#e0f2f1;
+        background-color:#99ced4;
       }
 
       :host([narrow-viewport]) .header .description {
@@ -83,9 +82,11 @@
       }
 
       #container {
-      	margin-left: 20px;
-      	margin-right: 20px;
+      	margin:0 auto;
       	margin-top: 10px;
+      	color: #333a56;
+      	width: 90%;
+
       }
 }
 
